# calculate_pi_GPU

./: .gitignore  CMakeLists.txt  README.md
lib/: linear_algebra_helpers.cpp  linear_algebra_helpers.cu  linear_algebra_helpers.h  parallel_reduction.h  testing.h
notebook/: 08_DeviceQuery_Bandwidth.ipynb  cpp_cuda.ipynb
src/: main.cpp  main.cu  parallel_reduction.cu  test.cu
